<resources>
    <string name="app_name">Gutenberg Books</string>
    <string name="gutendex_books">GUTENDEX BOOKS</string>
    <string name="page">Página</string>
    <string name="chapter">capitulo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menú</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="pages">páginas</string>
    <string name="unknown_author">Unknown</string>
    <string name="downloaded_books">Libros descargados</string>
    <string name="Open">Open navigation drawer</string>
    <string name="Close">Close navigation drawer</string>
    <string name="search_menu">Search</string>
    <string name="search">Buscar...</string>
    <string name="all_books">Todos los libros</string>
    <string name="copyright">Copyright</string>
    <string name="from_year">Desde:</string>
    <string name="to_year">Hasta:</string>
    <string name="language">Idioma:</string>
    <string name="category">Categoría:</string>
    <string name="book_not_found">¡No se han encontrado libros con estas características!</string>

    <string-array name="languages">
        <item>Seleccione un idioma</item>
        <item>Inglés</item>
        <item>Francés</item>
        <item>Finlandés</item>
        <item>Español</item>
    </string-array>

    <string-array name="languagesAbbreviation">
        <item name="empty"/>
        <item>en</item>
        <item>fr</item>
        <item>fi</item>
        <item>es</item>
    </string-array>

    <string-array name="categories">
        <item>Literatura infantil</item>
        <item>Sick children Fiction</item>
    </string-array>


</resources>